--- a/Angular-Course/PhotoManager/PhotoManager.UI/Views/Shared/_Layout.cshtml
+++ b/Angular-Course/PhotoManager/PhotoManager.UI/Views/Shared/_Layout.cshtml
@@ -1,60 +1,137 @@
 ﻿<!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="nameApp">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
-</head>
-<body>
-    <div id="wrap">
-        <div id="header">
-            <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
-                <div class="container">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="/">PHOTO MANAGER</a>
-                    </div>
 
-                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav"></ul>
-                        <ul class="nav navbar-nav navbar-right">
-                            @Html.Partial("_LoginPanel")
-                        </ul>
-                    </div>
-
-                </div>
-            </nav>
-        </div>
-
-        <div id="main" class="container title">
-            @if (Request.IsAuthenticated)
-            {
-                <div class="row title">
-                    @Html.Partial("_ManagePanel")
-                </div>
-            }
-            <div class="row">
-                @Html.Partial("_SearchPanel", String.Empty)
-            </div>
-            @RenderSection("featured", required: false)
-            <section class="content-wrapper main-content clear-both">
-                @RenderBody()
-            </section>
-        </div>
-    </div>
-
-    <div id="footer">
-        I am a footer.
-    </div>
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/bootstrap")
     @Scripts.Render("~/bundles/custom")
-    @RenderSection("scripts", required: false)
+    @*@Scripts.Render("~/bundles/angular")*@
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.2.10/angular-route.min.js"></script>
+    <script>
+
+        var nameApp = angular.module('nameApp', ['ngRoute']);
+        nameApp.config(function ($routeProvider) {
+            $routeProvider.
+                when('/', {
+                    templateUrl: '/Page1.html',
+                    controller: 'NameCtrl'
+                }).
+                when('/:countryId', {
+                    templateUrl: '/Page1.html',
+                    controller: 'CountryDetailCtrl'
+                }).
+                otherwise({
+                    redirectTo: '/'
+                });
+        });
+        
+        nameApp.factory('countries', function ($http) {
+            return {
+                list: function(callback) {
+                    $http({
+                        method: 'GET',
+                        url: '/home/countries',
+                        cache: true
+                    }).success(callback);
+                },
+                find: function (id, callback) {
+                    $http({
+                        method: 'GET',
+                        url: '/home/country' + id,
+                        cache: true
+                    }).success(callback);
+                }
+            }
+        });
+
+        nameApp.directive('country', function () {
+            return {
+                scope: {
+                    country: '='
+                },
+                restrict: 'A',
+                templateUrl: '/Page2.html',
+                controller: function($scope, countries) {
+                    countries.find($scope.country.id, function(country) {
+                        $scope.flagURL = country.flagURL;
+                    });
+                }
+            };
+        });
+
+        nameApp.controller('NameCtrl', function ($scope, countries) {
+            countries.list(function (countries) {
+                $scope.countries = countries;
+            });
+        });
+
+        nameApp.controller('CountryDetailCtrl', function ($scope, $routeParams, countries) {
+            countries.find($routeParams.countryId, function (countries) {
+                $scope.countries = countries;
+            });
+        });
+
+        nameApp.filter('encodeURI', function () {
+            return window.encodeURI;
+        });
+    </script>
+</head>
+<body>
+    <div ng-view></div>
+
+
+    @RenderBody()
+    @*<div id="wrap">
+            <div id="header">
+                <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+                    <div class="container">
+                        <div class="navbar-header">
+                            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                                <span class="icon-bar"></span>
+                            </button>
+                            <a class="navbar-brand" href="/">PHOTO MANAGER</a>
+                        </div>
+
+                        <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                            <ul class="nav navbar-nav"></ul>
+                            <ul class="nav navbar-nav navbar-right">
+                                @Html.Partial("_LoginPanel")
+                            </ul>
+                        </div>
+
+                    </div>
+                </nav>
+            </div>
+
+            <div id="main" class="container title">
+                @if (Request.IsAuthenticated)
+                {
+                    <div class="row title">
+                        @Html.Partial("_ManagePanel")
+                    </div>
+                }
+                <div class="row">
+                    @Html.Partial("_SearchPanel", String.Empty)
+                </div>
+                @RenderSection("featured", required: false)
+                <section class="content-wrapper main-content clear-both">
+                    @RenderBody()
+                </section>
+            </div>
+        </div>
+        <div id="footer">
+            I am a footer.
+        </div>*@
+
+
+    @*@RenderSection("scripts", required: false)*@
 </body>
 </html>
